// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Health Result Card renders the ExtremelyObese result card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorRed.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              BMI
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 32,
                                    "fontWeight": "bold",
                                    "height": 40,
                                    "letterSpacing": -1.5,
                                    "lineHeight": 37,
                                  },
                                ]
                              }
                            >
                              41.4
                            </Text>
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                Extremely obese
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Health Result Card renders the Obese result card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorOrange.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              BMI
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 32,
                                    "fontWeight": "bold",
                                    "height": 40,
                                    "letterSpacing": -1.5,
                                    "lineHeight": 37,
                                  },
                                ]
                              }
                            >
                              31.4
                            </Text>
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                Obese
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Health Result Card renders the healthy result card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorGreen.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              BMI
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 32,
                                    "fontWeight": "bold",
                                    "height": 40,
                                    "letterSpacing": -1.5,
                                    "lineHeight": 37,
                                  },
                                ]
                              }
                            >
                              27.4
                            </Text>
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                Healthy
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Health Result Card renders the high risk prediabetes card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorOrange.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              DIABETES
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 32,
                                    "fontWeight": "bold",
                                    "height": 40,
                                    "letterSpacing": -1.5,
                                    "lineHeight": 37,
                                  },
                                ]
                              }
                            >
                              4
                            </Text>
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                High risk
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Health Result Card renders the low risk prediabetes card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorGreen.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              DIABETES
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                  },
                                  Object {
                                    "height": 40,
                                  },
                                ]
                              }
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                Low risk
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Health Result Card renders the overweight result card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorPurple.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              BMI
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 32,
                                    "fontWeight": "bold",
                                    "height": 40,
                                    "letterSpacing": -1.5,
                                    "lineHeight": 37,
                                  },
                                ]
                              }
                            >
                              27.4
                            </Text>
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                Overweight
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Health Result Card renders the very high risk prediabetes card correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 0.01,
                  "restSpeedThreshold": 0.01,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              enabled={false}
              hitSlop={
                Object {
                  "right": -700,
                }
              }
              maxDeltaY={20}
              minOffsetX={5}
              onHandlerStateChange={[Function]}
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        replaceTheme={[Function]}
                        style={
                          Object {
                            "backgroundColor": "white",
                            "borderColor": "white",
                            "borderRadius": 4,
                            "borderWidth": 1,
                            "display": "flex",
                            "elevation": 5,
                            "flex": 1,
                            "margin": 5,
                            "marginBottom": 0,
                            "padding": 15,
                            "shadowColor": "#000",
                            "shadowOffset": Object {
                              "height": 2,
                              "width": 0,
                            },
                            "shadowOpacity": 0.1,
                            "shadowRadius": 3.84,
                            "width": 200,
                          }
                        }
                        updateTheme={[Function]}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "transparent",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignContent": "space-between",
                                "display": "flex",
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "paddingTop": 8,
                              }
                            }
                          >
                            <Image
                              height={18}
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/images/healthIndicatorRed.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  },
                                ]
                              }
                              width={18}
                            />
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 12,
                                    "fontWeight": "600",
                                    "letterSpacing": 1.6,
                                    "lineHeight": 16,
                                    "paddingLeft": 7,
                                  },
                                ]
                              }
                            >
                              DIABETES
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "column",
                                "paddingTop": 19,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 32,
                                    "fontWeight": "bold",
                                    "height": 40,
                                    "letterSpacing": -1.5,
                                    "lineHeight": 37,
                                  },
                                ]
                              }
                            >
                              5
                            </Text>
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "fontSize": 14,
                                    "fontWeight": "bold",
                                    "letterSpacing": 0.05,
                                    "lineHeight": 20,
                                    "minHeight": 48,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              <Text>
                                Very high risk
                              </Text>
                            </Text>
                          </View>
                          <View
                            style={
                              Object {
                                "paddingBottom": 12,
                              }
                            }
                          >
                            <Text
                              color="gray.1"
                              fontFamily="default"
                              fontSize={16}
                              lineHeight={22}
                              style={
                                Array [
                                  Object {
                                    "color": "#646464",
                                    "fontFamily": "Arial",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "color": "#646464",
                                    "fontSize": 14,
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;
